--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -9,8 +9,8 @@
 
 body {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   /* min-height: 100vh; */
   background-size: cover;
   background: url("../../public/assets/background (3).png") no-repeat center;
